# tictactoe2

./: .gitignore  Pipfile  README.md  learning_tictactoe.ipynb  main.py  pyproject.toml  tests.ipynb
tests/: test_board.py  test_players.py  test_stats.py
tictactoe/: data.py  game.py  io.py  players.py
tictactoe/players/: __init__.py
